# strongswan

./: CLAUDE.md  STRONGSWAN_DEPENDENCY_SOLUTION_PLAN.md  bug_fixes_summary.md  configure.ac  run_working_tests.sh  week2_test.sh
confCuTJlm/: defines.awk  subs.awk
src/libcharon/plugins/extsock/: Design.md  Makefile.am  README.md  extsock_plugin.c  extsock_plugin.h
src/libcharon/plugins/extsock/adapters/crypto/: extsock_cert_loader.c  extsock_cert_loader.h
src/libcharon/plugins/extsock/adapters/json/: extsock_json_parser.c  extsock_json_parser.h
src/libcharon/plugins/extsock/adapters/socket/: extsock_socket_adapter.c  extsock_socket_adapter.h
src/libcharon/plugins/extsock/adapters/strongswan/: extsock_strongswan_adapter.c  extsock_strongswan_adapter.h
src/libcharon/plugins/extsock/backup/: extsock_plugin_final.c  extsock_plugin_new.c  extsock_plugin_optimized.c
src/libcharon/plugins/extsock/client/: Makefile  README.md  apply-config.example.json  dscp-example.json  extsock_client.c  test_backend.json
src/libcharon/plugins/extsock/common/: extsock_common.h  extsock_errors.c  extsock_errors.h  extsock_logging.h  extsock_types.h
src/libcharon/plugins/extsock/design/2nd_segw/: 2nd_segw_design.md  implementation_plan.md
src/libcharon/plugins/extsock/docs/: API_REFERENCE.md  ARCHITECTURE_GUIDE.md  COMPLETION_FINAL.md  PHASE2_COMPLETION_REPORT.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md
src/libcharon/plugins/extsock/docs/classdiagram/: extsock_class_diagram.md
src/libcharon/plugins/extsock/domain/: extsock_config_entity.c  extsock_config_entity.h
src/libcharon/plugins/extsock/interfaces/: extsock_command_handler.h  extsock_config_repository.h  extsock_event_publisher.h  extsock_failover_manager.h
src/libcharon/plugins/extsock/test/: Makefile.adapter  Makefile.infrastructure  Makefile.integration  Makefile.legacy  Makefile.master  Makefile.pure  Makefile.tests  README.md  fix_legacy_tests.sh  quick_test.sh  run_coverage_improved.sh  run_coverage_manual.sh  run_coverage_test.sh  run_individual_test.sh  run_phase1_tests.sh  run_phase_tests.sh  run_tests.sh  run_working_tests.sh  test_backend_crash.c  test_compatibility_layer.c  test_config_entity_basic.c  test_failover_manager_simple  test_phase2_integration.c  test_simple  test_simple.c  test_sub_ca_debug.c
src/libcharon/plugins/extsock/test/.github/workflows/: ci.yml
src/libcharon/plugins/extsock/test/archived_phases/old_unit_backup/: test_simple_unit.c.old
src/libcharon/plugins/extsock/test/debug/: README.md  create_ca_chain.sh  multiple_ca_config.json  simple_key_test.c  sub_ca_test.json  test_debug_cert_loader.c  test_encrypted_config.json  test_fixed_loader.c  test_private_key_loading.sh
src/libcharon/plugins/extsock/test/docs/: CURRENT_TEST_STATUS.md  GTEST_MIGRATION_PLAN.md  HOW_TO_TEST.md  PHASE1_WEEK1_REPORT.md  PHASE1_WEEK2_REPORT.md  PHASE1_WEEK3_REPORT.md  PHASE1_WEEK4_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  REAL_IMPLEMENTATION_TEST_INTEGRATION_DESIGN.md  ROADMAP_PROGRESS.md  TASK_LIST_REAL_IMPLEMENTATION_TESTING.md  TDD_DEVELOPMENT_GUIDE.md  TESTING_COMPARISON.md  TEST_COMPLETION_REPORT.md
src/libcharon/plugins/extsock/test/gtest/: CMakeLists.txt  GTEST_RULES.md  Makefile.gtest  Makefile.segw_failover  QUICK_START_GUIDE.md  README.md  gtest_env.sh
src/libcharon/plugins/extsock/test/infrastructure/: Makefile.container  Makefile.enhanced_memory  advanced_memory_tracker.h  strongswan_mocks.c  strongswan_mocks.h  test_container.c  test_container.h  test_enhanced_memory_tracker.c  test_strongswan_mocks.c  test_test_container.c
src/libcharon/plugins/extsock/test/integration/: test_certificate_integration.sh  test_complete_workflow.c  test_config_entity_real.c  test_config_usecase_real.c  test_end_to_end_workflow.c  test_event_usecase_real.c  test_extsock_types_minimal.h  test_failover_integration.c  test_failover_manager_real.c  test_full_workflow.c  test_plugin_lifecycle_real.c
src/libcharon/plugins/extsock/test/mocks/: extsock_cert_loader_mock.c  extsock_usecase_mocks.c  simple_mocks.c  simple_mocks.h  strongswan_mock_factory.c  strongswan_mocks.h
src/libcharon/plugins/extsock/test/scenarios/: failover_test_scenarios.md  run_basic_tests.sh
src/libcharon/plugins/extsock/test/scripts/: run_final_verification.sh  run_full_test_suite.sh  run_memory_tests.sh  run_performance_tests.sh
src/libcharon/plugins/extsock/test/unit/: Makefile.extsock_errors_pure  Makefile.extsock_json_parser_adapter  Makefile.extsock_strongswan_adapter  Makefile.extsock_types_pure  extsock_errors_pure.c  extsock_json_parser_mock.c  extsock_json_parser_mock.h  extsock_socket_adapter_mock.c  extsock_socket_adapter_mock.h  extsock_strongswan_adapter_mock.c  extsock_strongswan_adapter_mock.h  extsock_types_pure.h  legacy_config_entity.h  standalone_extsock_errors.c  test_actual_functions.c  test_cert_loader.c  test_config_entity.c  test_config_usecase.c  test_config_usecase_real.c  test_domain_entity_real.c  test_error_scenarios.c  test_event_usecase.c  test_event_usecase_real.c  test_extsock_errors_pure.c  test_extsock_json_parser_adapter.c  test_extsock_strongswan_adapter.c  test_extsock_types_pure.c  test_failover_manager.c  test_failover_manager_simple.c  test_json_parser.c  test_json_parser_complete.c  test_json_parser_real.c  test_json_parser_simple.c  test_json_parser_simple_new.c  test_json_parser_standalone.c  test_linked_source.c  test_minimal_real.c  test_plugin_lifecycle.c  test_plugin_simple.c  test_simple_unit.c  (+6 more)
src/libcharon/plugins/extsock/usecases/: extsock_config_usecase.c  extsock_config_usecase.h  extsock_event_usecase.c  extsock_event_usecase.h  extsock_failover_manager.c
src/libcharon/plugins/extsock_ha/: Makefile.am  example_config.json  extsock_ha_core.c  extsock_ha_plugin.c  extsock_ha_plugin.h
src/libcharon/plugins/kernel_dummy/: Makefile.am  kernel_dummy_ipsec.c  kernel_dummy_ipsec.h  kernel_dummy_net.c  kernel_dummy_net.h  kernel_dummy_plugin.c  kernel_dummy_plugin.h
src/libcharon/plugins/vicisock/: Makefile.am  vicisock_plugin.c  vicisock_plugin.h
(+92 files in other folders)
